@@ -1,5 +1,7 @@
 30 August 2007
 
+* Move command-line macro parsing into parse.y/parse-fn.c and make it actually
+  work again. Found by Jo Fahlke, reported via Frank Terbeck.
 * account and all tokens are now normal match conditions. So, you can do useless
   stuff like:
 
@@ -597,4 +599,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.150 2007-08-30 10:45:06 nicm Exp $
+$Id: CHANGES,v 1.151 2007-08-30 15:08:32 nicm Exp $
